--- a/modules/local-caching-classloader/src/test/resources/log4j2-test.properties
+++ b/modules/local-caching-classloader/src/test/resources/log4j2-test.properties
@@ -27,11 +27,14 @@ appender.console.target = SYSTEM_OUT
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = %d{ISO8601} [%-8c{2}] %-5p: %m%n
 
-logger.01.name = org.apache.accumulo.classloader.lcc
-logger.01.level = trace
+logger.01.name = org.apache.accumulo
+logger.01.level = debug
 
-logger.02.name = org.apache.hadoop
-logger.02.level = error
+logger.02.name = org.apache.accumulo.classloader.lcc
+logger.02.level = trace
+
+logger.03.name = org.apache.hadoop
+logger.03.level = error
 
 rootLogger.level = warn
 rootLogger.appenderRef.console.ref = STDOUT
