--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
     <module>modules/example-iterators-a</module>
     <module>modules/example-iterators-b</module>
     <module>modules/vfs-class-loader</module>
+    <module>modules/local-caching-classloader</module>
   </modules>
   <scm>
     <connection>scm:git:https://gitbox.apache.org/repos/asf/accumulo-classloaders.git</connection>
